--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 20rem">
-                        <img src="./assets/432275_450790928317336_1192373592_n.jpg " class="card-img-top " alt="... " />
+                        <img src="./assets/bukit kasih.jpg " class="card-img-top " alt="... " />
                         <div class="card-body ">
                             <h5 class="card-title ">Bukit Kasih - Kanonang</h5>
                             <p class="card-text ">
